--- a/index.html
+++ b/index.html
@@ -8,6 +8,12 @@
     <link rel="stylesheet" href="./dist/tailwind.css">
 </head>
 <body>
-    
+    <div class="font-mono w-full h-screen bg-gray-500 ">
+        <header class="w-full h-20 bg-yellow-800 text-white grid place-items-center "> Header</header>
+        <main class=" w-full h-96 grid md:grid-cols-2">
+            <div class="text-white grid place-items-center bg-yellow-600 lg:text-4xl">Section1</div>
+            <div class=" text-white grid place-items-center bg-yellow-500 lg:bg-green-300">Section2</div>
+        </main>
+    </div>
 </body>
 </html>
